# bankai

./: .gitignore  README.md  index.html  package.json  project.md  tsconfig.json  vite.config.ts
docs/: AGENT_COORDINATION.md  WORKFLOW.md
docs/context/: CURRENT_STATE.md  NEXT_SESSION.md
docs/handoffs/: 2026-03-10-provider-auth-ux.md  2026-03-10-refactor-cleanup.md  2026-03-10-repo-context-bootstrap.md  2026-03-10-tool-persistence.md  2026-03-10-tool-registry.md  TEMPLATE.md
docs/tasks/: BACKLOG.md  claude-next.md
src/: App.svelte  app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  oauth.rs  settings.rs  state.rs
src-tauri/src/agent/: approval.rs  loop.rs  mod.rs
src-tauri/src/db/: messages.rs  mod.rs  sessions.rs  tool_calls.rs  tool_settings.rs  tools.rs
src-tauri/src/ipc/: commands.rs
src-tauri/src/providers/: openai.rs
src-tauri/src/tools/: browser.rs  filesystem.rs  mod.rs  registry.rs  shell.rs
src/components/chat/: ApprovalPanel.svelte  ChatInput.svelte  ChatView.svelte  MessageBubble.svelte
src/components/settings/: OAuthOnboarding.svelte  ProviderConfig.svelte  ToolRegistry.svelte  ToolSettings.svelte
src/components/sidebar/: SessionList.svelte
src/lib/chat/: toolPreview.ts
src/lib/stores/: agent.ts  auth.ts  messages.ts  providerStatus.ts  sessions.ts  settings.ts
src/lib/tauri/: commands.ts  events.ts
src/routes/: +page.svelte
