[package]
name = "bankai"
version = "0.1.0"
edition = "2021"

[lib]
name = "bankai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.5", features = [] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
