[package]
name = "bankai"
version = "0.1.0"
edition = "2021"

[lib]
name = "bankai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }

[dependencies]
async-openai = { version = "0.32.4", features = ["responses"] }
futures = "0.3.32"
keyring = "3.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2.10.3", features = [] }
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
